--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "husky": "^8.0.3",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.15",
     "pg-format": "^1.0.4"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "pg": "^8.11.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "pg": "^8.11.5",
+    "supertest": "^7.0.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
